// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with guest name when selected 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#CFD8DC",
      "borderRadius": 90,
      "height": 90,
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "width": 90,
    }
  }
>
  <Image
    resizeMode="contain"
    source={Object {}}
    style={
      Object {
        "borderRadius": 45,
        "height": 90,
        "width": 90,
      }
    }
  />
</View>
`;

exports[`renders with image when not selected 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#CFD8DC",
      "borderRadius": 90,
      "height": 90,
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "width": 90,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontWeight": "bold",
      }
    }
  >
    foo
  </Text>
</View>
`;
